Able to create 16x16 grid, need to re-format

--- a/index.css
+++ b/index.css
@@ -1,5 +1,16 @@
-div {
-        border: 1px solid red;
-        height: 10px;
-        width: 10px;
+:root {
+        --grid-columns: 1;
+        --grid-rows: 1;
+}
+
+.container {
+        display: grid;
+        grid-gap: 0.5px;
+        grid-template-rows: repeat(var(--grid-rows), 1fr);
+        grid-template-columns: repeat(var(--grid-columns), 1fr);
+}
+
+.grid-box {
+        padding: 1px;
+        border: 1px solid black;
 }
