Minor CSS changes

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,8 @@ header {
         width: 110px;
         border-radius: 100px;
         color: #12263A;
+        font-family: 'Handjet', cursive;
+        font-size: 25px;
 }
 
 .setting button:hover {
